chore: rebrand frontend to ssu-time

--- a/frontend/@ssu-time/frontend/.env
+++ b/frontend/@ssu-time/frontend/.env
@@ -1,6 +1,2 @@
 VITE_API_URL=http://localhost:9101/api
-VITE_APP_NAME=Speak On
-VITE_GOOGLE_CLIENT_ID=1037071828301-3kdnvp6bqng79ti75aemphuccn7c8sd7.apps.googleusercontent.com
-VITE_GOOGLE_REDIRECT_URI=https://react-speakon.vercel.app/auth/callback
-VITE_NAVER_CLIENT_ID=ak4K3AadBL8YlCFECZRv
-VITE_NAVER_REDIRECT_URI=https://react-speakon.vercel.app/auth/callback/naver
+VITE_APP_NAME=SSU Time
