--- a/frontend/@ssu-time/frontend/package.json
+++ b/frontend/@ssu-time/frontend/package.json
@@ -24,8 +24,8 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.55.0",
@@ -34,6 +34,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.46.2",
     "vite": "^5.0.8"
   }
 }
