--- a/ios/SSUTime/SSUTime/Info.plist
+++ b/ios/SSUTime/SSUTime/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>webcal</string>
+	</array>
+	<key>NSCalendarsUsageDescription</key>
+	<string>일정 등록을 위한 캘린더 권한이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
