--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=demo
+
+# feature flag: enable when RDS/JDBC repository is provided
+app.calendar.rds.enabled=false
+
+# By default, exclude JDBC auto-config so app runs without datasource
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+# Optional: configure stub repository mappings (key -> S3 URL) if needed later
+# app.calendar.stub.mappings[0].key=example
+# app.calendar.stub.mappings[0].url=https://s3-example/your.ics
+
+# When enabling RDS, remove the autoconfigure exclude above and set the following:
+# spring.datasource.url=jdbc:mysql://<host>:3306/<db>?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+# spring.datasource.username=
+# spring.datasource.password=
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
