feat: Mixpanel 연동 및 모바일 OS 파싱 기능 추가
- Mixpanel 연동을 위한 `MessageSender` 클래스 및 설정 추가.
- 사용자 에이전트 파싱 유틸리티 `UserAgentParser` 구현.
- 구독 기능 확장: 카테고리 맵 생성 및 이벤트 전송 로직 추가.
- Gradle에 Mixpanel 의존성 추가.

--- a/backend/api/src/main/resources/application.yml
+++ b/backend/api/src/main/resources/application.yml
@@ -13,3 +13,6 @@ cloud:
       bucket: "ssu-time-crawler-output"
     region:
       static: "ap-northeast-2"
+mixpanel:
+  token: ${MIXPANEL_TOKEN}
+  event-name: ${MIXPANEL_EVENT_NAME}
