--- a/backend/api/build.gradle
+++ b/backend/api/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // mixpanel
+    implementation 'com.mixpanel:mixpanel-java:1.4.4'
 }
 
 allOpen {
