--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -18,7 +18,7 @@ jobs:
     if: |
       github.event_name == 'workflow_dispatch' ||
       (github.event.pull_request.merged == true &&
-      contains(github.event.pull_request.labels.*.name, 'backend-deploy'))
+      contains(map(github.event.pull_request.labels, 'name'), 'backend-deploy'))
 
     permissions:
       id-token: write
