[#77]; refactor: CORS 설정 변경

--- a/backend/api/build.gradle
+++ b/backend/api/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'software.amazon.awssdk:s3:2.20.0'
     implementation 'software.amazon.awssdk:sts:2.20.0'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
